Fixed some excesive white spacing and alignment issues

--- a/frontend/src/container/about/About.scss
+++ b/frontend/src/container/about/About.scss
@@ -1,5 +1,4 @@
 .app__about {
-    flex: 1;
     width: 100%;
     flex-direction: column;
   }
@@ -9,7 +8,7 @@
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
   
   .app__profile-item {
@@ -18,7 +17,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-    margin: 2rem;
+    margin: 1rem;
   
     img {
       width: 100%;
@@ -29,7 +28,7 @@
   
     @media screen and (min-width: 2000px) {
       width: 370px;
-      margin: 2rem 4rem;
+      margin: 1rem 2rem;
   
       img {
         height: 320px;
