--- a/frontend/src/container/work/Work.scss
+++ b/frontend/src/container/work/Work.scss
@@ -3,11 +3,19 @@
     width: 100%;
     flex-direction: column;
   }
+
+  p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+            line-clamp: 2; 
+    -webkit-box-orient: vertical;
+  }
   
   .app__work-filter {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
   
